--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
   },
   "dependencies": {
     "angular2": "2.0.0-beta.15",
-    "bootstrap": "^3.3.6",
+    "systemjs": "0.19.26",
     "es6-shim": "^0.35.0",
-    "isobject": "^3.0.0",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
-    "systemjs": "0.19.26",
-    "zone.js": "0.6.10"
+    "zone.js": "0.6.10",
+    "bootstrap": "^3.3.6"
   },
   "devDependencies": {
     "browser-sync": "^2.12.5",
